tests/compile_errors/final-objects.buzz
// `age` is final
object Constant {
	final name: str,
	final age: int,
}

object PartiallyConstant {
	final name: str,
	age: int,
}

test "Constant object" {
	final constant = Constant{
		name = "Joe",
		age = 35,
	};

	constant.age = 38;
}
